syntax = "proto3";

package konvoy.mesh.v1alpha1;

option go_package = "v1alpha1";

message TrafficPermission {
  message Rule {
    message Selector { map<string, string> match = 1; }

    repeated Selector sources = 1;
    repeated Selector destinations = 2;
  }

  repeated Rule rules = 1;
}
